--- a/style.css
+++ b/style.css
@@ -1,104 +1,155 @@
-body{
-   font-family: "Dosis",sans-serif;
-  text-align: center;
+html {
+    height: 100%;
+    width: 100%;
 }
-
-#menu {
+body {
+    background-color: #efdc7e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;}
+.panda {
+    width: 500px;
+    height: 500px;
+    background-color: #f3f3f3;
+    border-radius: 50%;
+    position: absolute;
+    overflow: hidden;
+}
+.panda .body-shadow-1 {
+    width: 500px;
+    height: 500px;
+    border-radius: 50%;
+    position: absolute;
+    box-shadow: 10px 15px 20px 15px #FFFFFF inset;
+}
+.panda .body-shadow-2 {
+     width: 500px;
+     height: 500px;
+     border-radius: 50%;
+     position: absolute;
+     box-shadow: -20px -15px 25px 5px rgba(0, 0, 0, 0.2) inset;
+     z-index: 2;
+ }
+.panda .body-spot-1 {
+    width: 110px;
+    height: 100px;
+    background-color: #000000;
+    border-radius: 50%;
+    position: absolute;
+    top: 350px;
+    box-shadow: 40px -50px 30px 5px rgba(255, 255, 255, 0.2) inset;
+}
+.panda .body-spot-2 {
     width: 150px;
     height: 150px;
+    background-color: #000000;
+    border-radius: 50%;
     position: absolute;
-    left: 50%;
-    top: 50%;
-    margin: -75px 0 0 -75px;
-    list-style: none;
-    font-size: 200%;
+    top: 365px;
+    left: 20px;
+    box-shadow: 50px -75px 35px -20px rgba(255, 255, 255, 0.2) inset;
 }
-
-.menu-button {
-    opacity: 0;
+.panda__ear--left {
+    width: 90px;
+    height: 90px;
+    background-color: #000000;
+    border-radius: 50%;
+    position: absolute;
+    left: 50px;
+    top: 20px;
     z-index: -1;
 }
-
-.menu-button {
-    width: 150px;
-    height: 150px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin: -75px 0 0 -75px;
+.panda__ear--left__shadow {
+    width: 90px;
+    height: 90px;
     border-radius: 50%;
-    background: #424242;
-    background-size: 100%;
-    overflow: hidden;
-    text-decoration: none;
+    box-shadow: 8px 2px 10px 0px rgba(255, 255, 255, 0.5) inset;
 }
-
-#menu:not(:target)>a:first-of-type,
-#menu:target>a:last-of-type {
-    opacity: 1;
-    z-index: 1;
+.panda__ear--right {
+    width: 90px;
+    height: 90px;
+    background-color: #000000;
+    border-radius: 50%;
+    position: absolute;
+    left: 350px;
+    top: 20px;
+    z-index: -1;
 }
-
-#menu:not(:target)>.icon-plus:before,
-#menu:target>.icon-minus:before {
-    opacity: 1;
+.panda__ear--right__shadow {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    box-shadow: -15px -5px 10px 0px rgba(255, 255, 255, 0.3) inset;
 }
-
-.menu-item {
+.panda__eye--left {
+    position: absolute;
     width: 70px;
-    height: 70px;
+    height: 80px;
+    top: 45px;
+    left: 125px;
+    background-color: #000000;
+    border-radius: 90% 40% 80%/100% 30% 80% 30%;
+}
+.panda__eye--right {
     position: absolute;
-    left: 55%;
-    line-height: 5px;
-    top: 50%;
-    margin: -50px 0 0 -50px;
-    border-radius: 50%;
-    background-color: #424242;
-    transform: translate(0px, 0px);
-    transition: transform 500ms;
-    z-index: -2;
-    transition: .5s;
+    width: 70px;
+    height: 80px;
+    top: 45px;
+    left: 300px;
+    background-color: #000000;
+    border-radius: 90% 40% 80%/100% 30% 80% 30%;
+    transform: scale(-1, 1);
 }
-
-.menu-item:hover{
-opacity: 0.5;
-  box-shadow: 0 5px 10px black;
+.panda__nose {
+    width: 15px;
+    height: 10px;
+    position: absolute;
+    top: 80px;
+    left: 225px;
+    border-radius: 15px;
+    border-top: solid 15px;
+    border-left: solid 15px transparent;
+    border-right: solid 15px transparent;
 }
-
-
-.menu-item a {
-    color: #fff;
-    position: relative;
-    top: 30%;
+.center-circle {
+    width: 250px;
+    height: 250px;
+    position: absolute;
+    margin: auto;
     left: 0;
-    text-decoration: none;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    border-radius: 50%;
+    background-color: #efdc7e;
 }
-
-#menu:target>.menu-item:nth-child(6) {
-    transform: rotate(60deg) translateY(-150px) rotate(300deg);
-    transition-delay: 0s;
+.center-circle__shadow {
+    box-shadow: 0px 3px 15px 6px rgba(0, 0, 0, 0.1);
+    width: 250px;
+    height: 250px;
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    border-radius: 50%;
 }
-
-#menu:target>.menu-item:nth-child(5) {
-    transform: rotate(20deg) translateY(-155px) rotate(-20deg);
-    transition-delay: 0.1s;
+.ears {
+    width: 500px;
+    height: 500px;
+    border-radius: 50%;
+    position: absolute;
 }
-
-#menu:target>.menu-item:nth-child(3) {
-    transform: rotate(-20deg) translateY(-155px) rotate(20deg);
-    transition-delay: 0.2s;
-}
-
-#menu:target>.menu-item:nth-child(4) {
-    transform: rotate(-60deg) translateY(-150px) rotate(60deg);
-    transition-delay: 0.3s;
-}
-
-.content{
-  position: absolute;
-  text-align: center;
-  margin: -10px 0 0 -30px;
-  top: 70%;
-  left: 50%;
-  font-size: 20px;
+.ears .bottom-shadow {
+    width: 500px;
+    height: 50px;
+    background-color: rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 450px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.1);
+    z-index: -1;
 }
