--- a/style.css
+++ b/style.css
@@ -1,17 +1,26 @@
+*{padding:0; margin:0;}
 html {
     height: 100%;
     width: 100%;
 }
 body {
     background-color: #efdc7e;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     height: 100%;
-    width: 100%;}
+    width: 100%;
+}
+.navbar {
+    text-align: center;
+    vertical-align: middle;
+    padding: 50px;
+}
+.panda_box {
+    width: 100%;
+    height: 500px;
+    position: relative;
+}
 .panda {
     width: 500px;
-    height: 500px;
+    height: 100%;
     background-color: #f3f3f3;
     border-radius: 50%;
     position: absolute;
