--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-*{padding:0; margin:0;}
+* {
+  margin: 0;
+  padding: 0;
+}
 
 html {
   width: 100vw;
@@ -11,29 +14,39 @@ body {
     width: 100%;
 }
 
-.navbar {
-    border: 1px solid red;
+.navMenu {
     text-align: center;
     vertical-align: middle;
     padding: 50px;
 }
 
+.navMenu a {
+  color: #000000;
+  text-decoration: none;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  font-weight: 500;
+  display: inline-block;
+  width: 130px;
+}
+
+.navMenu a:hover {
+  color: #ffffff;
+}
+
 .panda_box {
-    border: 1px solid #0030d9;
     width: 100%;
     height: 500px;
     position: relative;
 }
 
 .panda_square {
-    border: 1px solid #009406;
     height: 100%;
     width: 500px;
     margin: auto;
 }
 
 .panda {
-    border: 1px solid #00ffd8;
     width: 500px;
     height: 100%;
     background-color: #f3f3f3;
@@ -43,16 +56,14 @@ body {
 }
 
 .panda .body-shadow-1 {
-    border: 1px solid #ff1e1e;
     width: 500px;
-    height: 100%;
+    height: 500px;
     border-radius: 50%;
     position: absolute;
     box-shadow: 10px 15px 20px 15px #FFFFFF inset;
 }
 
 .panda .body-shadow-2 {
-    border: 1px solid #aa00ff;
      width: 500px;
      height: 500px;
      border-radius: 50%;
@@ -62,23 +73,24 @@ body {
  }
 
 .panda .body-spot-1 {
-    width: 110px;
+    width: 100px;
     height: 100px;
     background-color: #000000;
     border-radius: 50%;
     position: absolute;
     top: 350px;
+    left: 400px;
     box-shadow: 40px -50px 30px 5px rgba(255, 255, 255, 0.2) inset;
 }
 
 .panda .body-spot-2 {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     background-color: #000000;
     border-radius: 50%;
     position: absolute;
-    top: 365px;
-    left: 20px;
+    top: 350px;
+    left: 0;
     box-shadow: 50px -75px 35px -20px rgba(255, 255, 255, 0.2) inset;
 }
 
@@ -152,7 +164,6 @@ body {
 }
 
 .center-circle {
-    border: 1px solid #ff8000;
     width: 250px;
     height: 250px;
     position: absolute;
@@ -166,7 +177,6 @@ body {
 }
 
 .center-circle__shadow {
-    border: 1px solid #90ff09;
     box-shadow: 0px 3px 15px 6px rgba(0, 0, 0, 0.1);
     width: 250px;
     height: 250px;
@@ -187,7 +197,6 @@ body {
 }
 
 .ears .bottom-shadow {
-    border: 1px solid #543a22;
     width: 500px;
     height: 50px;
     background-color: rgba(0, 0, 0, 0.1);
