--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@ html {
 }
 
 body {
+    background-image: linear-gradient(to bottom right, #35a600, #0015ee);
     background-color: #efdc7e;
-    height: 100%;
+    height: 100vh;
     width: 100%;
 }
 
@@ -105,13 +106,6 @@ body {
     z-index: -1;
 }
 
-.panda__ear--left__shadow {
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    box-shadow: 8px 2px 10px 0px rgba(255, 255, 255, 0.5) inset;
-}
-
 .panda__ear--right {
     width: 90px;
     height: 90px;
@@ -121,13 +115,6 @@ body {
     left: 350px;
     top: 20px;
     z-index: -1;
-}
-
-.panda__ear--right__shadow {
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    box-shadow: -15px -5px 10px 0px rgba(255, 255, 255, 0.3) inset;
 }
 
 .panda__eye--left {
@@ -173,6 +160,7 @@ body {
     top: 0;
     bottom: 0;
     border-radius: 50%;
+    background-image: linear-gradient(to bottom right, yellow, red);
     background-color: #efdc7e;
 }
 
