--- a/style.css
+++ b/style.css
@@ -48,30 +48,13 @@ body {
 }
 
 .panda {
-    width: 500px;
     height: 100%;
-    background-color: #f3f3f3;
+    width: 500px;
+    background-color: #ffffff;
     border-radius: 100%;
     position: absolute;
     overflow: hidden;
 }
-
-.panda .body-shadow-1 {
-    width: 500px;
-    height: 500px;
-    border-radius: 50%;
-    position: absolute;
-    box-shadow: 10px 15px 20px 15px #FFFFFF inset;
-}
-
-.panda .body-shadow-2 {
-     width: 500px;
-     height: 500px;
-     border-radius: 50%;
-     position: absolute;
-     box-shadow: -20px -15px 25px 5px rgba(0, 0, 0, 0.2) inset;
-     z-index: 2;
- }
 
 .panda .body-spot-1 {
     width: 100px;
@@ -79,9 +62,8 @@ body {
     background-color: #000000;
     border-radius: 50%;
     position: absolute;
-    top: 350px;
-    left: 400px;
-    box-shadow: 40px -50px 30px 5px rgba(255, 255, 255, 0.2) inset;
+    top: 375px;
+    left: 375px;
 }
 
 .panda .body-spot-2 {
@@ -90,30 +72,29 @@ body {
     background-color: #000000;
     border-radius: 50%;
     position: absolute;
-    top: 350px;
-    left: 0;
-    box-shadow: 50px -75px 35px -20px rgba(255, 255, 255, 0.2) inset;
+    top: 375px;
+    left: 25px;
 }
 
 .panda__ear--left {
-    width: 90px;
-    height: 90px;
+    width: 100px;
+    height: 100px;
     background-color: #000000;
     border-radius: 50%;
     position: absolute;
-    left: 50px;
-    top: 20px;
+    top: 25px;
+    left: 25px;
     z-index: -1;
 }
 
 .panda__ear--right {
-    width: 90px;
-    height: 90px;
+    width: 100px;
+    height: 100px;
     background-color: #000000;
     border-radius: 50%;
     position: absolute;
-    left: 350px;
-    top: 20px;
+    left: 375px;
+    top: 25px;
     z-index: -1;
 }
 
@@ -164,33 +145,9 @@ body {
     background-color: #efdc7e;
 }
 
-.center-circle__shadow {
-    box-shadow: 0px 3px 15px 6px rgba(0, 0, 0, 0.1);
-    width: 250px;
-    height: 250px;
-    position: absolute;
-    margin: auto;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    border-radius: 50%;
-}
-
 .ears {
     width: 500px;
     height: 500px;
     border-radius: 50%;
     position: absolute;
-}
-
-.ears .bottom-shadow {
-    width: 500px;
-    height: 50px;
-    background-color: rgba(0, 0, 0, 0.1);
-    position: absolute;
-    top: 450px;
-    border-radius: 50%;
-    box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
-    z-index: -1;
 }
